--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "express": "^4.16.2",
+    "faker": "^4.1.0",
     "method-override": "^2.3.10",
     "nunjucks": "^3.0.1",
     "pg": "^7.4.1",
